[package]
name = "mpris-rp"
version = "0.2.1"
authors = ["nickofolas <60761231+nickofolas@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.9.2"
chrono = "0.4"
discord-rich-presence = "0.1.6"